# irc_nagbot

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
